[project]
name = "renikud-onnx"
version = "0.1.0"
description = "ONNX Runtime inference for Hebrew grapheme-to-phoneme conversion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "onnxruntime>=1.24.2",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
