[project]
name = "renikud-plus"
version = "0.3.0"
description = "ONNX Runtime inference for Hebrew grapheme-to-phoneme conversion (ReNikud Plus)"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Maxim Melichov" },
    { name = "Yakov Kolani" },
    { name = "Morris Alper" },
]
keywords = ["hebrew", "g2p", "phonemizer", "onnx", "tts", "niqqud"]
dependencies = [
    "huggingface-hub>=0.26.0",
    "numpy",
    "onnxruntime>=1.24.2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/maxmelichov/RenikudPlus"
Repository = "https://github.com/maxmelichov/RenikudPlus"
Issues = "https://github.com/maxmelichov/RenikudPlus/issues"
Model = "https://huggingface.co/notmax123/RenikudPlus"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "renikud_onnx"
